Добавлена реализация для postrgreSQL и mongoDB
